@@ -206,7 +206,8 @@ public @interface CsvFileSource {
 	/**
 	 * The maximum number of characters allowed per CSV column.
 	 *
-	 * <p>Must be a positive number.
+	 * <p>Must be a positive number or {@code -1} to allow an unlimited number
+	 * of characters.
 	 *
 	 * <p>Defaults to {@code 4096}.
 	 *
